--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/shared/font-awesome.css"/>
 		<link rel="stylesheet" href="%PUBLIC_URL%/shared/foundation.css"/>
-		<link rel="stylesheet" href="%PUBLIC_URL%/shared/app.css"/>
+    <link rel="stylesheet" href="%PUBLIC_URL%/shared/app.css"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap" rel="stylesheet" />
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
