- relationship value display updates

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" href="%PUBLIC_URL%/shared/font-awesome.css"/>
-		<link rel="stylesheet" href="%PUBLIC_URL%/shared/foundation.css"/>
+    <!-- do we need foundation.css or font-awesome for this? i think that was just for the scenario app -->
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/shared/font-awesome.css"/> -->
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/shared/foundation.css"/> -->
     <link rel="stylesheet" href="%PUBLIC_URL%/shared/app.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap" rel="stylesheet" />
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>EcoModeler</title>
   </head>
   <body>
     <noscript>
